--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -1,6 +1,7 @@
 .feature-container {
     margin-top: 72px;
     display: flex;
+    align-items: center;
     overflow: hidden;
 }
 
@@ -8,6 +9,9 @@
     .feature-container {
         flex-direction: column;
         gap: 32px;
+        max-width: 500px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -19,6 +23,7 @@
 }
 
 @media screen and (max-width: 768px) {
+
     .feature-container .image-wrapper,
     .feature-container article {
         width: 100%;
