--- a/src/components/main-section-features/main-section-features.css
+++ b/src/components/main-section-features/main-section-features.css
@@ -28,9 +28,11 @@
     }
 }
 
+
+
 .features-container article {
     max-width: 570px;
-    padding-left: 125px;
+    padding-left: 8.7vw;
     margin-right: 32px;
 }
 
